--- a/0-data-process/numpy.ipynb
+++ b/0-data-process/numpy.ipynb
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1474,39 +1474,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "### 其他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.prod: array 对应 axis 的乘积"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "[ 2 15]\n",
+      "[ 3 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.prod([[1, 3], [2, 5]]))\n",
+    "print(np.prod([[1, 3], [2, 5]], axis = 0))\n",
+    "print(np.prod([[1, 3], [2, 5]], axis = 1))"
    ]
   }
  ],
