--- a/0-pre-process/numpy.ipynb
+++ b/0-pre-process/numpy.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -55,6 +55,9 @@
      "output_type": "stream",
      "text": [
       "[1 2 3] int64\n",
+      "3\n",
+      "2\n",
+      "[9]\n",
       "[1. 2. 3.] float64\n",
       "[1.+0.j 2.+0.j 3.+0.j] complex128\n",
       "[1 2 3 4 5 6 6]\n",
@@ -1486,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1503,6 +1506,54 @@
     "print(np.prod([[1, 3], [2, 5]]))\n",
     "print(np.prod([[1, 3], [2, 5]], axis = 0))\n",
     "print(np.prod([[1, 3], [2, 5]], axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 3 1]\n",
+      "[[[0 1 2 3 4 5]\n",
+      "  [0 1 2 3 4 5]\n",
+      "  [0 1 2 3 4 5]]\n",
+      "\n",
+      " [[0 1 2 3 4 5]\n",
+      "  [0 1 2 3 4 5]\n",
+      "  [0 1 2 3 4 5]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.argsort([1,9,5,6]))\n",
+    "print(np.argsort(np.arange(36).reshape(2,3,6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.6666666666666665\n",
+      "3.0\n",
+      "2.6666666666666665\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 3, 5]\n",
+    "print(np.var(a))\n",
+    "print(np.mean(a))\n",
+    "# var 的计算方法\n",
+    "print(np.mean((a - np.mean(a))**2))"
    ]
   }
  ],
