add reinforcement learning

--- a/0-pre-process/gym.ipynb
+++ b/0-pre-process/gym.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
    "source": [
     "import gym\n",
     "\n",
-    "env = gym.make('CartPole-v0')\n",
+    "env = gym.make('LunarLander-v2')\n",
     "# env = gym.make('Taxi-v2')\n",
     "# env = gym.make('Copy-v0')\n",
     "md_action, md_obs, tuple_action, tuple_obs = is_multidimensional(env)\n",
@@ -163,6 +163,13 @@
     "\n",
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
