--- a/5-reinforcement-learning/Monte-Carlo.ipynb
+++ b/5-reinforcement-learning/Monte-Carlo.ipynb
@@ -20,8 +20,8 @@
      "text": [
       "action_space Tuple(Discrete(2), Discrete(2), Discrete(5))\n",
       "observation_space Discrete(6)\n",
-      "(1, 1, 3)\n",
-      "2\n"
+      "(1, 1, 4)\n",
+      "4\n"
      ]
     }
    ],
@@ -44,6 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 数据预处理\n",
+    "\n",
     "这里的 action_space 是一个 3 维的离散值,这里需要做一个转换:\n",
     "\n",
     "(0,0,0) <=> 0   \n",
@@ -137,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 使用 $\\epsilon$-Greedy 完成 1 个 episode:\n",
+    "### 1. 使用 $\\epsilon$-Greedy 完成 1 个 episode:\n",
     "\n",
     "  $$\n",
     "  \\{S_1, A_1, R_2, ..., S_T\\} \\sim \\pi\n",
@@ -189,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 每个 episode 中的状态 $S_t$ 和动作 $A_t$:\n",
+    "### 2. 每个 episode 中的状态 $S_t$ 和动作 $A_t$:\n",
     "  $$\n",
     "  \\begin{align*}\n",
     "  & N(S_t, A_t) = N(S_t, A_t) + 1 \\\\\n",
@@ -227,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 训练 10000 个 episodes:"
+    "### 3. 训练 10000 个 episodes:"
    ]
   },
   {
@@ -292,6 +294,13 @@
     "    \n",
     "print(n_s_a)\n",
     "print(q_s_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 检验训练结果"
    ]
   },
   {
