--- a/0-pre-process/numpy.ipynb
+++ b/0-pre-process/numpy.ipynb
@@ -1669,26 +1669,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.75930843 -0.20484985 -0.17503112 ... -1.57044569 -1.15394775\n",
-      "  -1.36637063]\n",
-      " [ 0.81972143  0.56935553  0.71450955 ... -1.14254347  1.93384747\n",
-      "  -0.66480725]\n",
-      " [-1.39333939 -0.9040286  -0.95981488 ... -0.66316481  1.34359809\n",
-      "   0.45909389]\n",
+      "[[ 2.14799752 -0.41820876 -1.47994605 ... -0.84206837 -1.86625846\n",
+      "  -1.4081478 ]\n",
+      " [ 0.66222753  1.34409151 -0.98362023 ... -1.10363367 -1.88541754\n",
+      "   2.01587128]\n",
+      " [ 0.26666903  0.2307335   1.57919177 ...  0.43872329  1.55609708\n",
+      "  -0.25898404]\n",
       " ...\n",
-      " [-0.81647742 -0.62795904 -0.3496408  ...  1.61869431 -1.93556383\n",
-      "  -1.05266984]\n",
-      " [-1.02610248 -1.64054602  0.76814043 ... -0.66802218  0.21757193\n",
-      "   1.9209766 ]\n",
-      " [-0.65578324 -1.24422176  0.35866802 ...  0.18580564  1.72828189\n",
-      "   0.40855591]]\n",
+      " [-1.45421971 -1.89195246  0.2354702  ...  0.76210366 -0.61513514\n",
+      "   1.03357194]\n",
+      " [-0.42594522  1.15614142  0.39275416 ... -0.05754799 -0.04360392\n",
+      "   0.41129031]\n",
+      " [ 1.18292729 -1.38342697  0.25335201 ... -0.6154701   0.74358864\n",
+      "   1.28865376]]\n",
       "(36,)\n"
      ]
     }
@@ -1697,6 +1697,48 @@
     "a = np.random.randn(500, 36)\n",
     "print(a)\n",
     "print(np.mean(a[:100], axis = 0).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 85.92321856 -36.72488908 -63.21623766 -59.08794429  13.54500582]\n",
+      " [ 19.1089406   92.90290395  30.63541937  49.78132751  30.71397417]\n",
+      " [ 49.54296185  92.26134721 -98.32234041 -78.71112466 -40.25925725]]\n",
+      "[[ 85.92321856 -36.72488908 -63.21623766 -59.08794429  13.54500582]\n",
+      " [ 19.1089406   92.90290395  30.63541937  49.78132751  30.71397417]\n",
+      " [ 49.54296185  92.26134721 -98.32234041 -78.71112466 -40.25925725]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(12345)\n",
+    "print(np.random.uniform(-100, 100, size=(3, 5)))\n",
+    "np.random.seed(12345)\n",
+    "print(np.random.rand(3, 5) * 200 - 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 7 8 1 2 6 9 3 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.permutation(np.arange(10)))"
    ]
   }
  ],
