--- a/0-pre-process/numpy.ipynb
+++ b/0-pre-process/numpy.ipynb
@@ -1726,19 +1726,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4 5 7 8 1 2 6 9 3 0]\n"
+      "[4 9 7 5 3 1 2 8 0 6]\n"
      ]
     }
    ],
    "source": [
     "print(np.random.permutation(np.arange(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 6 6]\n",
+      "[9 5 0 6 3 4 8 1 2 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.full(3, 6))\n",
+    "a = np.arange(10)\n",
+    "np.random.shuffle(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1]\n",
+      "[1 3 0 2 0 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.bincount(np.arange(10)))\n",
+    "print(np.bincount(np.array([1,3,0,1,5,3,1,5])))"
    ]
   }
  ],
